<resources>
    <string name="app_name">MyNote</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_find">Find</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="name">Name</string>
    <string name="tv_date">Дата рождения</string>
    <string name="et_date_hint">Дата рождения</string>
    <string name="et_date_caption">День рождения</string>
    <string name="et_note_hint">Описание</string>
    <string name="et_note_caption">Заметка</string>
    <string name="avatar">Аватар</string>
    <string name="et_age">Возраст</string>
    <string name="sound_enabled">Звуковые уведомления включены</string>
    <string name="sound_disabled">Звуковые уведомления выключены</string>
    <string name="vibration_enabled">Вибро уведомления включены</string>
    <string name="vibration_disabled">Вибро уведомления выключены</string>
    <string name="save">Сохранено</string>
    <string name="save_error">Ошибка сохранения</string>
    <string name="settings">Настройки</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="dialog_delete">Вы действительно хотите удалить эту запись?</string>
    <string name="action_import">Импорт</string>
    <string name="action_export">Экспорт</string>

</resources>
