<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.nint.mynote.ui.MainActivity">

    <item android:id="@+id/action_search"
          android:title="@string/action_find"
          android:orderInCategory="100"
          android:icon="@android:drawable/ic_menu_search"
          app:showAsAction="always"
          app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_import"
          android:title="@string/action_import"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_export"
          android:title="@string/action_export"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>

