<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">
            <ImageView
                    android:id="@+id/iv_avatar"
                    android:contentDescription="@string/avatar"
                    android:padding="8dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            <TextView
                    android:id="@+id/tv_name"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">
            <TextView
                    android:padding="8dp"
                    android:text="@string/et_date_caption"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:text="@string/et_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">
            <TextView
                    android:id="@+id/tv_date"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/tv_age"
                    android:padding="16dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
                android:padding="8dp"
                android:text="@string/et_note_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/tv_note"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>

